syntax = "proto3";

package accounts;

message User {
  string name = 1; // This is the primary key
  string email = 2;
  string password_hash = 3;
  bool is_verified = 4;
  int64 create_dt = 5;
}

enum TeamRole {
  TEAM_MEMBER = 0;
  TEAM_OWNER = 1;
}

message TeamMember {
  string name = 1;
  TeamRole role = 2;
}

message Team {
  string name = 1;
  int64 create_dt = 2;
  repeated TeamMember members = 3;
}

enum OrganizationRole {
  ORGANIZATION_MEMBER = 0;
  ORGANIZATION_OWNER = 1;
}

message OrganizationMember {
  string name = 1;
  OrganizationRole role = 2;
}

message Organization {
  string name = 1;
  string email = 2;
  int64 create_dt = 3;
  repeated OrganizationMember members = 4;
  repeated Team teams = 5;
}

enum OwnerType {
  USER = 0;
  ORGANIZATION = 1;
}

message Owner {
  OwnerType type = 1;
  string name = 2;
}
